--- a/examples/package.json
+++ b/examples/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@skgandikota/react-org-chart": "^1.0.0",
     "@unicef/react-org-chart": "file:..",
     "gh-pages": "^2.2.0",
+    "i": "^0.3.7",
+    "npm": "^10.2.5",
     "react": "^16.12.0",
     "react-d3": "^0.4.0",
     "react-dom": "^16.12.0",
